package src.gui;

public interface ImageInterface {
    String BASE_URL = "EN2_EatNRun/resources/images/";
}
