package src.logic;

public enum Direction {
    UP,
    DOWN,
    LEFT,
    RIGHT
}
