package src.logic;

public enum GameStatus {
    ONGOING,
    WON,
    LOST
}
